--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,11 @@ rsa==4.6
 scipy==1.5.4
 six==1.15.0
 sqlparse==0.4.1
-termcolor==1.1.0
+tensorboard
+tensorboard-plugin-wit
+tensorflow-cpu==2.2.0
+tensorflow-estimator
+termcolor
 typing-extensions==3.7.4.3
 urllib3==1.26.2
 Werkzeug==1.0.1
